crates/api/tests/snapshots/snapshots__auth_login.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "access_token": "access:admin",
    "refresh_token": "refresh:admin"
  },
  "status": 200
}
