crates/api/tests/snapshots/snapshots__delete_movie_still_holding_versions.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "not_empty",
      "message": "the movie still has versions"
    }
  },
  "status": 409
}
