crates/api/tests/snapshots/snapshots__delete_season_still_holding_episodes.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "not_empty",
      "message": "the season still has episodes"
    }
  },
  "status": 409
}
