crates/api/tests/snapshots/snapshots__delete_series_still_holding_seasons.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "not_empty",
      "message": "the series still has seasons"
    }
  },
  "status": 409
}
