crates/api/tests/snapshots/snapshots__episode_edit_bad_air_date.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "bad_request",
      "message": "unparseable air_date: last thursday"
    }
  },
  "status": 400
}
