crates/api/tests/snapshots/snapshots__err_batch_too_large.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "bad_request",
      "message": "too many titles: 201 exceeds maximum of 200"
    }
  },
  "status": 400
}
