crates/api/tests/snapshots/snapshots__err_forbidden.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "forbidden",
      "message": "admin role required"
    }
  },
  "status": 403
}
