crates/api/tests/snapshots/snapshots__err_invalid_credentials.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "invalid_credentials",
      "message": "invalid credentials"
    }
  },
  "status": 401
}
